--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "test": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@heroui/button": "2.2.22",
@@ -24,11 +25,12 @@
     "@heroui/theme": "2.4.17",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
+    "@testing-library/user-event": "^14.6.1",
     "clsx": "2.1.1",
     "framer-motion": "^11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
-    "next": "15.3.1",
+    "next": "^15.3.5",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -39,6 +41,10 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.30.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "22.15.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -55,10 +61,14 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "next-router-mock": "^1.0.2",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
+    "ts-node": "^10.9.2",
     "typescript": "5.6.3"
   }
 }
