--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint --fix",
     "test": "jest"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@heroui/button": "2.2.22",
     "@heroui/card": "^2.2.21",
@@ -23,6 +26,7 @@
     "@heroui/switch": "2.2.20",
     "@heroui/system": "2.4.18",
     "@heroui/theme": "2.4.17",
+    "@prisma/client": "^6.11.1",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
     "@testing-library/user-event": "^14.6.1",
@@ -66,9 +70,11 @@
     "next-router-mock": "^1.0.2",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
+    "prisma": "^6.11.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "5.6.3"
   }
 }
