--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -73,6 +74,7 @@
     "prisma": "^6.11.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "5.6.3"
