--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-app-template",
-  "version": "0.0.1",
+  "name": "portfolio-v3",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -14,25 +14,25 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@heroui/button": "2.2.22",
-    "@heroui/card": "^2.2.21",
-    "@heroui/code": "2.2.16",
-    "@heroui/input": "2.4.22",
-    "@heroui/kbd": "2.2.17",
-    "@heroui/link": "2.2.19",
-    "@heroui/listbox": "2.3.21",
-    "@heroui/navbar": "2.2.20",
-    "@heroui/react": "^2.7.11",
-    "@heroui/snippet": "2.2.23",
-    "@heroui/switch": "2.2.20",
-    "@heroui/system": "2.4.18",
-    "@heroui/theme": "2.4.17",
+    "@heroui/button": "^2.2.23",
+    "@heroui/card": "^2.2.22",
+    "@heroui/code": "^2.2.17",
+    "@heroui/input": "^2.4.23",
+    "@heroui/kbd": "^2.2.18",
+    "@heroui/link": "^2.2.20",
+    "@heroui/listbox": "^2.3.22",
+    "@heroui/navbar": "^2.2.21",
+    "@heroui/react": "^2.8.0",
+    "@heroui/snippet": "^2.2.24",
+    "@heroui/switch": "^2.2.21",
+    "@heroui/system": "^2.4.19",
+    "@heroui/theme": "^2.4.18",
     "@prisma/client": "^6.11.1",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
     "@testing-library/user-event": "^14.6.1",
     "clsx": "2.1.1",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^12.23.5",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
@@ -46,6 +46,7 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.30.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -69,11 +70,11 @@
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
     "next-router-mock": "^1.0.2",
-    "postcss": "8.5.3",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "prisma": "^6.11.1",
     "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
