--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-aria/visually-hidden": "3.8.24",
     "@testing-library/user-event": "^14.6.1",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.5",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
