--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint --fix",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "format": "prettier --write ."
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -37,6 +38,7 @@
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
+    "next-mdx-remote-client": "^1.1.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -45,7 +47,7 @@
     "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
-    "@next/eslint-plugin-next": "15.3.1",
+    "@next/eslint-plugin-next": "^15.3.1",
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
@@ -63,7 +65,7 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
@@ -72,7 +74,8 @@
     "jest-environment-jsdom": "^30.0.4",
     "next-router-mock": "^1.0.2",
     "postcss": "^8.5.3",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.11.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "^4.1.11",
