--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@next/eslint-plugin-next": "^15.3.1",
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
