--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,31 +1,28 @@
 services:
-  db:
-    image: postgres:17
-    container_name: blog_postgres_dev
+  mongo:
+    image: mongo:8.0
+    container_name: mongo-dev
     restart: always
-    env_file:
-      - .env.dev
     ports:
-      - "5432:5432"
+      - "27017:27017"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - mongo-data:/data/db
 
   app:
     container_name: portfolio-v3-dev
     build:
       context: .
       dockerfile: Dockerfile-dev
-    command: sh -c "npx prisma studio --hostname 0.0.0.0 --port 5555 & npm run dev"
+    command: sh -c "npm run dev"
     ports:
       - "3000:3000"
-      - "5555:5555"
     volumes:
       - .:/app
       - /app/node_modules
     env_file:
       - .env.dev
     depends_on:
-      - db
+      - mongo
 
 volumes:
-  pgdata:
+  mongo-data:
