--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-v3",
   "version": "1.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -15,33 +16,26 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@heroui/button": "^2.2.23",
-    "@heroui/card": "^2.2.22",
-    "@heroui/code": "^2.2.17",
-    "@heroui/input": "^2.4.23",
-    "@heroui/kbd": "^2.2.18",
-    "@heroui/link": "^2.2.20",
-    "@heroui/listbox": "^2.3.22",
-    "@heroui/navbar": "^2.2.21",
-    "@heroui/react": "^2.8.0",
-    "@heroui/snippet": "^2.2.24",
-    "@heroui/switch": "^2.2.21",
-    "@heroui/system": "^2.4.19",
-    "@heroui/theme": "^2.4.18",
-    "@prisma/client": "^6.11.1",
+    "@heroui/react": "^2.8.1",
+    "@payloadcms/db-mongodb": "^3.47.0",
+    "@payloadcms/next": "^3.47.0",
+    "@payloadcms/payload-cloud": "^3.47.0",
+    "@payloadcms/richtext-lexical": "^3.47.0",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
     "@testing-library/user-event": "^14.6.1",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.5",
+    "graphql": "^16.11.0",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
-    "next-mdx-remote-client": "^1.1.1",
     "next-themes": "0.4.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "payload": "^3.47.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -56,8 +50,8 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "22.15.3",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "autoprefixer": "10.4.21",
@@ -77,7 +71,6 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.11.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
