--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "format": "prettier --write ."
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@heroui/react": "^2.8.1",
