--- a/Application/Backend/.gitignore
+++ b/Application/Backend/.gitignore
@@ -3,12 +3,11 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
+
+/.idea/*
+!/.idea/runConfigurations
 
 # testing
 /coverage
@@ -16,7 +15,9 @@
 # next.js
 /.next/
 /out/
-
+env.*
+.env.*
+*env.*
 # production
 /build
 
@@ -28,10 +29,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# local env files
+.env*.local
 
 # vercel
 .vercel
@@ -40,16 +40,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/lib/generated/prisma/*
-*.db
-*.sql
-/generated/prisma
-/media/*
-node_modules
-media
-*.log
 .env
-dist
-build
-Application/backend/.yarnrc
-Application/backend/.npmrc
+
+/media
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
