--- a/Application/Frontend/package.json
+++ b/Application/Frontend/package.json
@@ -2,12 +2,10 @@
   "name": "portfolio-frontend",
   "version": "1.0.1",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "format": "prettier --write ."
@@ -20,14 +18,11 @@
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.5",
-    "graphql": "^16.11.0",
-    "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "next-themes": "0.4.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "sharp": "^0.34.3"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
