--- a/Application/Frontend/package.json
+++ b/Application/Frontend/package.json
@@ -20,9 +20,10 @@
     "framer-motion": "^12.23.5",
     "lucide-react": "^0.525.0",
     "next": "^15.4.5",
+    "next-mdx-remote-client": "^2.1.3",
     "next-themes": "0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -37,8 +38,8 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "22.15.3",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.1",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "autoprefixer": "10.4.21",
