--- a/Application/Backend/package.json
+++ b/Application/Backend/package.json
@@ -30,7 +30,9 @@
     "next": "^15.4.5",
     "payload": "3.47.0",
     "react": "19.1.1",
-    "sharp": "0.34.2"
+    "sharp": "0.34.2",
+    "picomatch": "4.0.3",
+    "yaml": "2.8.0"
   },
   "devDependencies": {
     "@playwright/test": "1.54.2",
