Added mount point for when running prod in windows for testing

--- a/Application/Backend/Docker/Prod/docker-compose-backend-prod.yml
+++ b/Application/Backend/Docker/Prod/docker-compose-backend-prod.yml
@@ -32,5 +32,6 @@ services:
       - .env
     volumes:
       - /mnt/user/appdata/portfolio-v3/media:/app/media
+      # - ../../media:/app/media # for Windows testing
     networks:
       - portfolio-network-prod
