--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -23,15 +23,16 @@ services:
     restart: unless-stopped
     depends_on:
       - mongo
-    ports:
-      - '3001:3001'
     env_file:
       - .env
     volumes:
       - /mnt/user/appdata/portfolio-v3/media:/app/media
+    ports:
+    - '127.0.0.1:3001:3001'
+    - '10.253.0.1:4001:3001'
     networks:
       - portfolio-network-prod
-      
+
   frontend:
     container_name: portfolio-frontend
     image: naeemkhan14/portfolio-frontend:latest
@@ -40,7 +41,21 @@ services:
     restart: always
     depends_on:
       - backend
+    networks:
+      - portfolio-network-prod
+
+  nginx:
+    image: nginx:stable
+    container_name: portfolio-nginx
+    restart: unless-stopped
     ports:
-      - 3501:3501
+      - '8888:80'
+    volumes:
+      - /mnt/user/appdata/portfolio-v3/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /mnt/user/appdata/portfolio-v3/media:/app/media:ro
+      - /mnt/user/appdata/portfolio-v3/logs:/var/log/nginx
+    depends_on:
+      - frontend
+      - backend
     networks:
       - portfolio-network-prod
