--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,32 +1,45 @@
-events {}
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-  server {
-    listen 80;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location / {
-      proxy_pass http://frontend:80;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
+    sendfile on;
+    keepalive_timeout 65;
+
+    # ---------------- FRONTEND ----------------
+    server {
+        listen 80;
+
+        access_log /var/log/nginx/access.log main;
+
+        location / {
+            proxy_pass http://frontend:3501;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Static files
+        location /_next/ {
+            proxy_pass http://frontend:3501;
+        }
+
+        location /images/ {
+            proxy_pass http://frontend:3501;
+        }
     }
-
-    location ~ ^/(admin|api) {
-      allow 192.168.178.129/16;  
-      allow 127.0.0.1;
-      deny all;
-      proxy_pass http://payload:3001;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # Media served directly (Payload static files)
-    location /media/ {
-      alias /app/media/;
-    }
-  }
 }
