--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,24 +29,11 @@ jobs:
         with:
           node-version: '22'
 
-      - name: Install, test and build frontend
+      - name: Run tests
         working-directory: ${{ env.FRONTEND_CONTEXT }}
         run: |
-          npm ci
           npm test
-          npm run build
-
-      - name: Setup Node 22 (for backend build)
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-
-      - name: Install and build backend
-        working-directory: ${{ env.BACKEND_CONTEXT }}
-        run: |
-          npm ci
-          npm run build
-
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
