Fix the JSONArgsRecommended warning

--- a/Application/Frontend/Docker/Prod/Dockerfile-prod
+++ b/Application/Frontend/Docker/Prod/Dockerfile-prod
@@ -40,5 +40,6 @@ USER nextjs
 
 EXPOSE 3501
 ENV PORT=3501
+ENV HOSTNAME="0.0.0.0"
 
-CMD HOSTNAME="0.0.0.0" node server.js
+CMD ["node", "server.js"]
