--- a/Application/Frontend/package.json
+++ b/Application/Frontend/package.json
@@ -23,7 +23,9 @@
     "next-mdx-remote-client": "^2.1.3",
     "next-themes": "0.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.9.2"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
