--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,13 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    # Format the IP to show real client IP. Takes everything from the start until the first comma.
+    map $http_x_forwarded_for $real_client_ip {
+        ~^([^,]+) $1;
+        default $remote_addr;
+    }
+
+    log_format main '$real_client_ip - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
